# dsentiment

./: .env  .env.example  .gitignore  CLAUDE.md  config.py  main.py  pyproject.toml
api/: dse.py  emails.py  oauth.py
auth/: oauth.py
models/: schemas.py
services/: email_service.py  stock_service.py
tests/: test_emails.py  test_oauth.py
utils/: response.py  token_storage.py
